src/index.css
@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");

html[data-theme='dark'] {
    --primary: #27beff;
    --overlay-primary: rgba(39, 190, 255, 0.231);
    --page-background-dark: #1a1a1a;
    --page-background-light: #3a3a3a;
    --text: #9a9a9a;
    --footer-text: #bcbcbc;
    --modal-text: #bcbcbc;
    --modal-background: #202020;
    --button-gradient-dark: #202020;
    --button-gradient-light: #404040;
    --button-gradient-dark-alt: #282828;
    --button-gradient-light-alt: #393939;
    --control-label: #27beff;
    --control-label-text-shadow: 0 0 5px var(--primary);
    --control-shadow: #101010;
    --control-inactive-background: #101010;
    --control-inactive-text: #191919;
    --control-inactive-text-shadow: 0 0 2px #212121;
    --icon-glow: drop-shadow(0 0 5px var(--primary));
    --screen-background: #00262c;
    --screen-outer-shadow: #151515;
    --screen-inner-shadow: #050505;
    --screen-gradient-outer: #000801;
    --screen-background-lines: rgba(71, 212, 255, 0.05);
    --screen-text: #27beff;
    --screen-text-shadow: 0 0 5px var(--primary);
    --beat-light-active: #f28007;
    --beat-light-inactive-background: #1a1a1a;
    --beat-light-inactive-shadow-dark: #0f0f0f;
    --beat-light-inactive-shadow-light: #262626;
    --volume-inactive-shadow-dark: #0f0f0f;
    --volume-inactive-shadow-light: #262626;
    --trackbar-background: #191919;
    --track-toggle-highlight-dark: #451414;
    --track-toggle-highlight-light: #831c1c;
    --track-toggle-shadow: 0px 5px 9px var(--control-shadow);
    --title-text: var(--primary);
    --title-background: none;
    --title-background-clip: none;
    --title-text-shadow: 0 0 5px var(--primary);
}

html[data-theme='light'] {
    --primary: #f8333c;
    --overlay-primary: #777;
    --page-background-dark: #dcdcdc;
    --page-background-light: #f8f8f8;
    --text: #303030;
    --footer-text: #202020;
    --modal-text: #202020;
    --modal-background: #dcdcdc;
    --button-gradient-dark: #dcdcdc;
    --button-gradient-light: #fcfcfc;
    --button-gradient-dark-alt: #dfdfdf;
    --button-gradient-light-alt: #f9f9f9;
    --control-label: #202020;
    --control-label-text-shadow: none;
    --control-shadow: #707070;
    --control-inactive-background: #d5d5d5;
    --control-inactive-text: #d5d5d5;
    --control-inactive-text-shadow: none;
    --icon-glow: none;
    --screen-background: #6cf6af;
    --screen-outer-shadow: #707070;
    --screen-inner-shadow: #808080;
    --screen-gradient-outer: #9effd6;
    --screen-background-lines: rgba(71, 212, 255, 0.4);
    --screen-text: #053e56;
    --screen-text-shadow: none;
    --beat-light-active: #31ff9f;
    --beat-light-inactive-background: #555;
    --beat-light-inactive-shadow-dark: #222;
    --beat-light-inactive-shadow-light: #6a6a6a;
    --volume-inactive-shadow-dark: #0f0f0f;
    --volume-inactive-shadow-light: #262626;
    --trackbar-background: #4d4d4d;
    --track-toggle-highlight-dark: #888;
    --track-toggle-highlight-light: #d5d5d5;
    --track-toggle-shadow: 0px 5px 9px #3c3c3c;
    --title-text: transparent;
    --title-background: #252525;
    --title-background-clip: text;
    --title-text-shadow: 0px 5px 5px rgba(255, 255, 255, 0.3);
}

html {
    height: 100%;
}

body {
    font-family: "Audiowide", -apple-system, BlinkMacSystemFont, "Segoe UI",
        "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
        "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: var(--text);
    display: flex;
    justify-content: center;
    background: linear-gradient(0deg, var(--page-background-dark), var(--page-background-light));
    height: 100%;
    margin: 0;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

h1 {
    margin: 0;
}

#root {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
        monospace;
}

.appMainContainer {
    display: flex;
    flex-direction: column;
    grid-gap: 10px;
    margin-top: 10px;
    width: 95%;
}

/* MAIN CONTROL PANEL STYLES */

.controlPanel {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-gap: 10px;
    align-items: center;
    justify-items: center;
    padding: 5px 0 10px;
}

.controlLabel {
    font-size: 12px;
    color: var(--overlay-primary);
    display: flex;
    flex-basis: 100%;
    align-items: center;
    margin: 4px 0px;
}

.controlLabel:before,
.controlLabel:after {
    content: "";
    background: var(--overlay-primary);
    height: 3px;
    flex-grow: 1;
    margin: 0px 4px;
}

.controlLabel:before {
    border-radius: 20px 0 0 20px;
}

.controlLabel:after {
    border-radius: 0 20px 20px 0;
}

.buttonLabelContainer {
    width: 100%;
    max-width: 100px;
}

.tempoLabelContainer {
    width: 60%;
    margin-top: -5px;
    margin-bottom: -10px;
}

.volumeLabelContainer {
    width: 60%;
    margin-top: -5px;
    margin-bottom: -10px;
}

/* CONTROL PANEL MOBILE LAYOUT */

.playButton {
    order: 2;
    grid-column: 1 / 5;
    justify-self: end;
}

.stopButton {
    order: 3;
    grid-column: 5 / 9;
}

.muteButton {
    order: 4;
    grid-column: 9 / 13;
    justify-self: start;
}

.playLabelContainer {
    order: 5;
    grid-column: 1 / 5;
    justify-self: end;
}

.stopLabelContainer {
    order: 6;
    grid-column: 5 / 9;
}

.muteLabelContainer {
    order: 7;
    grid-column: 9 / 13;
    justify-self: start;
}

.globalVolumeControl {
    order: 8;
    grid-column: 1/7;
}

.tempoControl {
    order: 9;
    grid-column: 7/13;
}

.volumeLabelContainer {
    order: 10;
    grid-column: 1/7;
}

.tempoLabelContainer {
    order: 11;
    grid-column: 7/13;
}
.visualiserContainer {
    order: 12;
    grid-column: 1/13;
}
/* ... */

